fix(Toc): align items

--- a/src/components/Toc/Toc.scss
+++ b/src/components/Toc/Toc.scss
@@ -32,7 +32,7 @@ $leftOffset: 57px;
         flex-grow: 0;
         flex-shrink: 0;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         padding: 10px 10px 8px 0;
 
         &_scrolled {
